# portfolio-bevy-automata

./: Cargo.toml  README.md  examples.txt
src/: cell.rs  grid.rs  main.rs  rendering.rs  rule.rs
