[package]
name = "portfolio-bevy-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bytemuck = "1.14.0"
enum-map = "2.7.3"
itertools = "0.12.0"
strum = { version = "0.25.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
