[package]
name = "portfolio-bevy-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
bytemuck = "1.14.0"
chumsky = "0.9.3"
enum-map = "2.7.3"
itertools = "0.12.0"
noise = "0.8.2"
strum = { version = "0.25.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
